<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="TEST_FINISHED_NAMED" Id="{7a3926c3-51ee-4f1e-953f-089cfa833d72}" SpecialFunc="None">
    <Declaration><![CDATA[(* Sets a test defined by TestName as finished. Note that the TestName-input must match
   a TestName that has been previously defined in this test suite. *)
FUNCTION TEST_FINISHED_NAMED : BOOL
VAR_INPUT
    TestName : Tc2_System.T_MaxString;
END_VAR
VAR
    Counter : UINT := 0;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[TEST_FINISHED_NAMED := FALSE;
// Find the test suite and set the test in that test suite as finished
FOR Counter := 1 TO GVL_TcUnit.NumberOfInitializedTestSuites BY 1 DO
    IF GVL_TcUnit.TestSuiteAddresses[Counter] = GVL_TcUnit.CurrentTestSuiteBeingCalled THEN
        IF GVL_TcUnit.TestSuiteAddresses[Counter]^.SetTestFinished(TestName := TestName) THEN
        	TEST_FINISHED_NAMED := TRUE;
    	ELSE
			Tc2_System.ADSLOGSTR(msgCtrlMask := Tc2_System.ADSLOG_MSGTYPE_WARN,
                                                msgFmtStr := 'Attempt to mark test: %s finished, failed.',
                                                strArg := TestName);
		END_IF    
	RETURN;
    END_IF
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="TEST_FINISHED_NAMED">
      <LineId Id="76" Count="12" />
      <LineId Id="15" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>